munit/v/1.2/run-and-wait-scope.adoc
= 运行并等待范围
：版本信息：3.7.0和更新
:keywords: munit, testing, unit testing

== 功能

由MUnit提供的运行和等待范围允许您指示MUnit等待所有异步执行完成。因此，直到由生产代码打开的所有线程都已完成处理，才开始执行测试。

[NOTE]
--
如果您使用Maven，请考虑一下：

您需要将MUnit同步模块工件添加到您的`pom`文件中：

[source,xml,linenums]
----
<!-- Synchronize Scope Dependency -->
<dependency>
          <groupId>com.mulesoft.munit.utils</groupId>
          <artifactId>munit-synchronize-module</artifactId>
          <version>1.0.0</version>
</dependency>
----

如果您选择 link:/anypoint-studio/v/6/enabling-maven-support-for-a-studio-project[mavenize]您的项目，Studio会通知您将添加Synchronize模块依赖项。
--


== 定义运行和等待

在某些情况下，您的生产代码可能会启动产生关键结果的线程。通常，这些是您想要验证的结果。但是，如果这些结果正在一个单独的线程中处理，那么您的测试将在单独的线程完成之前运行并完成，也就是说，在您要验证的结果可用之前。为避免此问题，您可以使用`run-and-wait`范围。

为了本文的目的，我们假设我们正在测试以下Mule代码：


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:run-and-wait-thread-sleep.png[run-and-wait-thread-sleep]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<flow name="exampleFlow">
  <async>
      <expression-component>
          Thread.sleep(3000);
      </expression-component>
  </async>
</flow>
----
....
------

目标是让您的测试等到`exampleFlow`完成。为此，请按下图所示执行测试。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:run-and-wait-flow-ref.png[run-and-wait-flow-ref]

. Define `run-and-wait` scope.
. Call the actual production code to test.
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<flow name="testFlow">
    <synchronize:run-and-wait timeout="16000"> //<1>
        <flow-ref name="exampleFlow"/> //<2>
    </synchronize:run-and-wait>
</flow>
----

<1> Define `run-and-wait` scope.
<2> Call the actual production code to test.

....
------


[%header%autowidth.spread]
|===
|属性名称 |描述

| `timeout`
| 定义等待所有线程完成的时间（以毫秒为单位）。

| `runAsync`
|  _ Boolean_。当runAsync设置为_true_时，同步模块会复制触发MuleEvent并将其`MessageExchangePattern`自动设置为ONE_WAY，表示您的MUnit测试使用ONE_WAY消息传递风格处理您的Mule应用程序的请求。 +
这使您的测试套件能够处理由Mule应用程序触发的事件，并将它们放入SEDA队列中。被调用者线程返回并且该消息由SEDA线程池处理。

|===

提示：使用此工具是对Mule批处理作业运行MUnit测试的唯一方法。



使用Java代码定义运行和等待== 

[[java-api-usage]]
===  Java API的用法

要在Java中定义`run-and-wait`作用域，您需要实现`Synchronizer`抽象类：

[source,java,linenums]
----
import org.mule.construct.Flow;
import org.mule.Synchronizer;
import org.mule.api.MuleEvent;

public class TheTest extends FunctionalMunitSuite {

  @Test
  public void test() throws Exception{
    final Flow flow = (Flow) muleContext.getRegistry().
      lookupFlowConstruct("testFlow");   //<1>

    Synchronizer synchronizer =
      new Synchronizer(muleContext, 12000){  //<2>

        @Override
        protected MuleEvent process(MuleEvent event) throws Exception{

            return flow.process(event);  //<3>
        }
    };

    MuleEvent event = testEvent("payload");
    synchronizer.runAndWait(event);   //<4>
  }
}
----
<1>获取要测试的流程。
<2>创建一个新的`Synchronizer`并实现抽象方法`process`。
<3>通常你想要做的是运行一个流程。
<4>调用注释＃2中定义的`Synchronizer`实现。

